--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
+    "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "highcharts-react-official": "^3.2.1",
     "next": "14.1.0",
